--- a/sass/_pages-menus.scss
+++ b/sass/_pages-menus.scss
@@ -1,3 +1,4 @@
+
 section img {
   width: 99%;
   padding-top: -4em;
@@ -34,6 +35,7 @@ section img {
   .icone-vide-menu {
     position: absolute;
     margin-left: 6%;
+    padding-right: 2%;
     @media (min-width: 1024px) {
       margin-left: 10%;
       bottom: 92%;
@@ -44,7 +46,8 @@ section img {
   }
   .icone-plein-menu {
     position: absolute;
-    margin-left: 6%;
+    margin-left: 10%;
+    padding-right: 2%;
     opacity: 0;
     @media (min-width: 1024px) {
       margin-left: 10%;
@@ -61,6 +64,10 @@ section img {
       -moz-transition: all 0.3s linear 0.2s;
       -ms-transition: all 0.3s linear 0.2s;
       -o-transition: all 0.3s linear 0.2s;
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
 }
   }
 }
@@ -75,7 +82,7 @@ section img {
   }
 }
 
-.descript-menu {
+.description-menu {
   cursor: pointer;
   position: relative;
   width: 95%;
@@ -83,7 +90,7 @@ section img {
   border-radius: 35px;
   box-shadow: 0 0 20px #0000002e;
   padding-left: 2em;
-  @media(min-width: 1024px) {
+  @media (min-width: 1024px) {
     width: 28%;
     margin-right: 1em;
     margin-bottom: 1em;
@@ -117,39 +124,45 @@ section img {
         font-size: 1.5em;
       }
     }
-    .anim-container {
-      transition: width 0.5s linear;
-      width: 0;
+    .animation-container {
+      transition: width .5s linear;
+      -webkit-transition: width .5s linear;
+      -moz-transition: width .5s linear;
+      -ms-transition: width .5s linear;
+      -o-transition: width .5s linear;
       height: 100%;
-      background-color:  $tertiaire;
+      width: 0;
+      background-color: $tertiaire;
       border-radius: 0 35px 35px 0;
       position: absolute;
       right: 0;
       top: 0;
-      @media(min-width: 1024px){
+      @media (min-width: 1024px) {
         right: 0;
         top: 0;
         border-radius: 0 20px 20px 0;
       }
     }
     .fa-check-circle {
-      display: none;
+      position: absolute;
+      right: 1.2em;
+      top: 35%;
+      opacity: 0;
       color: white;
       font-size: 3em;
-      margin: 1.2em;
-      @media(min-width: 1024px) {
+      @media (min-width: 1024px) {
         font-size: 2.4em;
-        margin-left: 0.4em;
-        margin-top: 1em;
+        right: 0.5em;
       }
     }
     &:hover {
       .fa-check-circle {
-        display: inline-block;
+        opacity: 1;
+        animation-delay: 2s;
         animation: rotation .5s linear ;
         -webkit-animation: rotation .5s linear ;
 }
-      .anim-container /*background icone check*/ {
+      .animation-container /*background icone check*/ {
         width: 17%;
       }
       span { /*tarif*/
