--- a/sass/style.css
+++ b/sass/style.css
@@ -18,7 +18,7 @@ body li {
   position: absolute;
   width: 99%;
   height: 100%;
-  background: #000;
+  background: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,18 +28,30 @@ body li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  animation: 6s accueil forwards;
+  animation: 3s accueil forwards;
   pointer-events: none;
-  -webkit-animation: 6s accueil forwards;
+  -webkit-animation: 3s accueil forwards;
 }
 
 @-webkit-keyframes accueil {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
   100% {
     opacity: 0;
   }
 }
 
 @keyframes accueil {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
   100% {
     opacity: 0;
   }
@@ -50,8 +62,8 @@ body li {
   font-size: 90px;
   letter-spacing: 25px;
   font-family: 'shrikhand' , cursive;
-  animation: 2s flash linear infinite;
-  -webkit-animation: 2s flash linear infinite;
+  animation: .5s flash linear infinite;
+  -webkit-animation: .5s flash linear infinite;
 }
 
 @-webkit-keyframes flash {
@@ -59,7 +71,7 @@ body li {
     color: #ff79da;
     text-shadow: 0 0 7px #ff79da;
   }
-  90% {
+  50% {
     color: #9356dc;
     text-shadow: 0 0 7px #ff79da;
   }
@@ -74,7 +86,7 @@ body li {
     color: #ff79da;
     text-shadow: 0 0 7px #ff79da;
   }
-  90% {
+  50% {
     color: #9356dc;
     text-shadow: 0 0 7px #ff79da;
   }
@@ -82,6 +94,46 @@ body li {
     color: #ff79da;
     text-shadow: 0 0 7px #ff79da;
   }
+}
+
+.lettre:nth-child(1) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+
+.lettre:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
+.lettre:nth-child(3) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
+.lettre:nth-child(4) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.lettre:nth-child(5) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.lettre:nth-child(6) {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+.lettre:nth-child(7) {
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+.lettre:nth-child(8) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 .pied-de-page {
@@ -408,7 +460,7 @@ section img {
 
 .carte-restaurant .icone-plein-menu {
   position: absolute;
-  margin-left: 10%;
+  margin-left: 6%;
   padding-right: 2%;
   opacity: 0;
 }
@@ -451,7 +503,85 @@ section img {
   }
 }
 
+.delay-1 {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.delay-2 {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+.delay-3 {
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.delay-4 {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+
+.delay-5 {
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+}
+
+.delay-6 {
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+
+.delay-7 {
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+
+.delay-8 {
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+}
+
+.delay-9 {
+  -webkit-animation-delay: 9s;
+          animation-delay: 9s;
+}
+
+.delay-10 {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+}
+
+@-webkit-keyframes itemAppear {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes itemAppear {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 .description-menu {
+  animation: 1s itemAppear;
+  -webkit-animation: 1s itemAppear;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-transform: scale(0);
+          transform: scale(0);
   cursor: pointer;
   position: relative;
   width: 95%;
@@ -552,8 +682,6 @@ section img {
 
 .description-menu:hover .fa-check-circle {
   opacity: 1;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
   animation: rotation .5s linear;
   -webkit-animation: rotation .5s linear;
 }
