--- a/sass/_pages-menus.scss
+++ b/sass/_pages-menus.scss
@@ -95,6 +95,7 @@ section img {
     transform: scale(1);
   }
 }
+
 .description-menu {
   animation-name: apparition-progressive;
   animation-duration: .5s;
@@ -113,9 +114,12 @@ section img {
     border-radius: 20px;
     display: inline-block;
   }
+    .detail-menu {
+      position: relative;
+    }
     h3 {
-      font-size: 1.6em;
-      padding-top: 0.5em;
+      font-size: 2.4em;
+      padding-top: 1em;
       font-weight: bolder;
       @media (min-width: 1024px) {
         font-size: 1.3em;
@@ -125,17 +129,19 @@ section img {
     p {
       text-overflow: ellipsis;
       overflow: hidden;
-      padding-bottom: 1.7em;
-      font-weight: 50;
+      white-space: nowrap;
+      padding-bottom: .7em;
+      width: 90%;
+      font-size: 3em;
       @media (min-width: 1024px) {
-        padding-bottom: 0.5em;
+        font-size: 1em;
       }
     } 
-    span {
-      float: right;
-      margin-right: 8%;
+    h4 {
+      position: absolute;
+      top: 20%;
+      left: 90%;
       font-size: 3.5em;
-      font-weight: 600;
       @media (min-width: 1024px) {
         font-size: 1.5em;
       }
@@ -161,11 +167,11 @@ section img {
     }
     .fa-check-circle {
       position: absolute;
-      right: 1.2em;
+      right: 1em;
       top: 35%;
       opacity: 0;
       color: white;
-      font-size: 3em;
+      font-size: 4.2em;
       @media (min-width: 1024px) {
         font-size: 2.4em;
         right: 0.5em;
@@ -180,8 +186,12 @@ section img {
       .animation-container /*background icone check*/ {
         width: 17%;
       }
-      span { /*tarif*/
-        transform: translateX(-2em);
+      p {
+        width: 70%;
+        transition-duration: 1s;
+      }
+      h4 {
+        transform: translateX(-3em);
         transition-duration: 1s;
       }
     }
@@ -189,12 +199,12 @@ section img {
 
 @keyframes rotation { /*rotation icone check*/
   from {
-      transform: rotate(270deg);
-} 
+      opacity: 0;
+  } 
   50% {
-      transform: rotate(315deg);
-} 
+    transform: rotate(270deg);
+  }
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
