--- a/sass/_head.scss
+++ b/sass/_head.scss
@@ -111,8 +111,9 @@ article h2 {
     padding: 3.5em 0;
     font-weight: bold;
     @media (min-width: 1024px) {
-      padding: 1.5em ;
-      display: inline;
+      padding: 1.2em ;
+      margin-right: .5em;
+      display: inline-block;
     }
     &:hover {
       box-shadow: 0 0 20px $secondaire;
