--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,13 +1,11 @@
 $primaire: #9356dc;
 $secondaire: #ff79da;
 $tertiaire: #99e2d0;
-$background: #eaeaea;
+$background: #f6f6f6;
 
 
 body {
-  h1 {
-    font-family: 'roboto', sans-serif;
-  }
+  font-family: 'Roboto', sans-serif;
   a {
     text-decoration: none;
   }
@@ -17,13 +15,14 @@ body {
 }
 
 .pied-de-page h3 {
-  font-family: 'shrikhand' , cursive;
+  font-family: 'Shrikhand' ;
 }
 
 .loader {
-  position: absolute;
-  width: 99%;
+  position: fixed;
+  width: 100%;
   height: 100%;
+  z-index: 10000;
   background: black;
   display: flex;
   justify-content: center;
@@ -41,13 +40,15 @@ body {
   }
   100% {
     opacity: 0;
+    
   }
 }
 
 .lettre {
+  margin-bottom: 5em;
   color: $primaire;
-  font-size: 90px;
-  letter-spacing: 25px;
+  font-size: 3em;
+  letter-spacing: 5px;
   font-family: 'shrikhand' , cursive;
   animation: .5s flash linear infinite;
   -webkit-animation: .5s flash linear infinite;
