--- a/sass/_head.scss
+++ b/sass/_head.scss
@@ -1,155 +1,141 @@
 header .logo {
   margin-left: 20%;
-  margin-top: 2em;
-  width: 50%;
-  padding-bottom: 2em;
+  margin-top: 1.7em;
+  width: 60%;
   @media (min-width: 1024px) {
-    width: 20em;
-    margin-left: 40%;
-  }
-}
-
-.fa-arrow-left { /*uniquement menu resto*/
-  position: absolute;
-  left: 1px;
-  top: 1em;
-  font-size: 3em;
-  margin-left: 1em;
-  color: black;
-}
-
-.formulaire {/*recherche en fonction de la ville*/
-  width: 100%;
-  height: 8em;
-  margin-top: -2em;
-  text-align: center;
-  background-color: $background;
-  border: 1px solid $background;
-  border-top: 1px solid grey;
-  @media (min-width: 1024px) {
-    height: 4em;
-  }
-}
-
-section {     /*partie descriptif*/
-  background-color: #f6f6f6;
-  padding-bottom: 4em;
-  padding-top: 2em;
-}
-
-.fa-map-marker-alt {
-  position: relative;
-  margin-left: 30%;
-  top: 1em;
-  font-size: 3.5em;
-  @media (min-width: 1024px) {
-    top: 0.7em;
-    font-size: 2.5em;
+    width: 25%;
     margin-left: 35%;
   }
 }
 
+.formulaire {/*recherche en fonction de la ville*/
+  width: 99%;
+  height: 3.5em;
+  text-align: center;
+  background-color: lightgrey;
+  border: 1px solid $background;
+  border-top: 1px solid grey;
+}
+
+section {     /*partie descriptif*/
+  height: 20em;
+  background-color: $background;
+}
+
+.fa-map-marker-alt {
+  position: relative;
+  margin-left: 25%;
+  top: 1.2em;
+  font-size: 2em;
+  @media (min-width: 1024px) {
+    margin-left: 40%;
+  }
+}
+
 ::placeholder {
-  padding-left: 1.5em;
-  font-size: 3em;
+  padding-left: 15%;
+  font-size: 1.5em;
   font-weight: bold;
+  @media (min-width: 1024px) {
+    padding-left: 1%;
+  }
 }
 
 .explorer {
   h1 {
-    margin: 2em;
     text-align: center;
-    font-size: 2em;
+    font-size: 1.4em;
+    margin: 0 2em;
+    padding-top: 2em;
+    font-weight: bolder;
   }
   p {
     text-align: center;
     margin: 2em;
-    @media (min-width: 1024px) {
-      font-size: 1.2em;
-    }
   }
 }
 
 .bouton {
+  width: 60%;
   border-radius: 85px;
-  margin: 5em 10em ;
-  padding: 2em;
+  margin: 3em;
+  padding: 1.5em 2em;
   background: linear-gradient($secondaire, $primaire);
   text-align: center;
   a {
     color: white;
-    font-weight: bold;
+    font-size: 1.1em;
   }
   @media (min-width: 1024px) {
-    width: 15%;
-    margin-left: 40%;
+    width: 35%;
+    margin-left: 30%;
     margin-top: 2em;
     margin-bottom: 1em;
   }
   &:hover {
-    filter: brightness(120%);
-  }
+    filter: brightness(110%);
+    box-shadow: 1px 1px 20px $primaire;
+    -webkit-filter: brightness(110%);
+}
 }
 
 article h2 {
-  margin-left: 2em;
-  margin-top: 4em;
+  margin-left: 1em;
+  margin-top: 1em;
   @media (min-width: 1024px) {
-    margin-top: 1em;
+    margin-top: 0;
   }
 }
 
 .fonctionnement {
-  @media (min-width: 1024px){
-    display: flex;
-  }
   li {
+    width: 90%;
+    padding: 1.5em 1em;
+    margin-top: 2em;
     background-color: $background;
-    box-shadow: 0 0 20px #0c0c0c2e;
-    margin: 1em 3em 4em 3em;
-    border-radius: 30px;
-    padding: 3.5em 0;
-    font-weight: bold;
-    @media (min-width: 1024px) {
-      padding: 1.2em ;
-      margin-right: .5em;
+    box-shadow: -5px 5px 5px grey;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    @media(min-width: 1024px) {
+      width: 30%;
+      padding: 1.5em 0.5em;
+      margin-right: 0.5em;
       display: inline-block;
     }
     &:hover {
-      box-shadow: 0 0 20px $secondaire;
       background-color: $secondaire;
-      filter: brightness(140%);
-      -webkit-filter: brightness(140%);
-}
+      box-shadow: -10px 10px 10px $primaire;
+    }
   }
   i/*icone*/ {
+    font-size: 1.3em;
+    margin-right: 1.5em;
     color: grey;
-    margin-right: 4em;
-    @media (min-width: 1024px) {
-      margin: 0.5em;
-      font-size: 2em;
+    @media(min-width: 1024px) {
+      margin-right: 0.5em;
     }
   }
   a {
     color: black;
-    margin-left: 5em;
-    @media (min-width: 1024px) {
-      margin-left: 0.1em;
-      width: 40%;
-    }
+    font-weight: bold;
+    margin-left: 5%;
   }
 }
 
 .numero {
-  color: white;
   display: inline;
-  margin-right: 1.5em;
-  padding: 1.2em;
-  font-size: 1.5em;
+  position: relative;
+  right: 15%;
+  color: white;
+  font-size: 0.8em;
+  padding: 0.8em 1em;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
   background-color: $primaire;
-  @media (min-width: 1024px) {
-    margin-right: 1em;
-    font-size: 1em;
-  }
 }
