--- a/sass/_restaurant.scss
+++ b/sass/_restaurant.scss
@@ -1,38 +1,35 @@
 #restaurants {
   background-color: $background;
-  margin-top: 8em;
+  margin-top: 3em;
   padding-bottom: 6em;
-  @media (min-width: 1024px) {
-    margin-top: 3em;
-    padding-bottom: 1em;
-  }
   h2 {
     padding-top: 3em;
-    margin-left: 2em;
-    margin-bottom: 3em;
-    @media (min-width: 1024px) {
-      padding-top: 1em;
-      margin-bottom: 1em;
-    }
+    margin-left: 1em;
+    margin-bottom: 1em;
+    font-weight: bolder;
   }
 }
 
 .vignette-restaurant {
   width: 90%;
-  margin-left: 3em;
+  margin-left: 1em;
   margin-bottom: 3em;
   position: relative;
   background-color: white;
   border-radius: 30px;
-  box-shadow: 0 0 20px #0000002e;
+  box-shadow: -5px 5px 5px grey;
   @media (min-width: 1024px) {
     display: inline-block;
-    width: 20%;
+    margin-left: 5em;
+    width: 35%;
     height: 15em;
+  }
+  &:hover {
+    box-shadow: -5px 10px 10px black ;
   }
   img {
     width: 100%;
-    height: 22em;
+    height: 12em;
     object-fit: cover;
     border-radius: 30px 30px 0 0;
     @media (min-width: 1024px) {
@@ -40,21 +37,17 @@
     }
   }
   h3 {
-    margin-top: 0.5em;
-    margin-left: 1.5em;
+    margin-top: .5em;
+    margin-left: 1em;
     color: black;
-    @media (min-width: 1024px) {
-      margin-left: 1em;
-    }
   }
   h4 {
-    margin-left: 1.5em;
-    margin-top: -1em;
-    padding-bottom: 2em;
+    margin-left: 1em;
+    margin-top: -0.5em;
+    padding-bottom: 1em;
     color: black;
     font-weight: normal;
     @media (min-width: 1024px) {
-      margin-left: 1em;
       font-size: 1em;
     }
   }
@@ -65,15 +58,12 @@
   color: #008766;
   padding: 0.5em;
   position: absolute;
-  font-size: 3em;
+  font-size: 1em;
   margin-left: 65%;
-  @media (min-width: 1024px) {
-    font-size: 1em;
-  }
 }
 
 .icone-vide {
-  font-size: 4em;
+  font-size: 1.7em;
   position: absolute;
   left: 85%;
   bottom: 10%;
@@ -89,7 +79,7 @@
 .icone-plein {
   opacity: 0;
   position: absolute;
-  font-size: 4em;
+  font-size: 1.7em;
   left: 85%;
   bottom: 10%;
   @media (min-width: 1024px) {
